--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "build:dev": "webpack --mode development --config webpack.dev.config.js --display-modules",
+    "build:prod": "webpack --mode production --config webpack.prod.config.js --display-modules"
   },
   "eslintConfig": {
     "extends": "react-app"
